force-app/main/default/objects/ISUF_Metrics__c/ISUF_Metrics__c.object-meta.xml
<CustomObject>
    <label>ISUF Metric</label>
    <nameField>
        <displayFormat>ISUFMET-{000000}</displayFormat>
        <label>ISUF Metrics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ISUF Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>