force-app/main/default/objects/ISUF_Metrics__c/fields/Donor_Count_Goal__c.field-meta.xml
<CustomField>
    <fullName>Donor_Count_Goal__c</fullName>
    <label>Donor Count Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>