force-app/main/default/objects/ISUF_Metrics__c/fields/Goal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Goal_Amount__c</fullName>
    <label>Goal Amount</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>