force-app/main/default/objects/ISUF_Metrics__c/fields/Household_Count__c.field-meta.xml
<CustomField>
    <fullName>Household_Count__c</fullName>
    <label>Household Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>