force-app/main/default/objects/ISUF_Metrics__c/fields/Percent_Through_FY__c.field-meta.xml
<CustomField>
    <fullName>Percent_Through_FY__c</fullName>
    <label>Percent Through FY</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>