force-app/main/default/objects/ISUF_Metrics__c/fields/Percent_to_Goal__c.field-meta.xml
<CustomField>
    <fullName>Percent_to_Goal__c</fullName>
    <label>Percent to Goal</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>