force-app/main/default/objects/ISUF_Metrics__c/fields/Production_Amount__c.field-meta.xml
<CustomField>
    <fullName>Production_Amount__c</fullName>
    <label>Production Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>