force-app/main/default/objects/ISUF_Metrics__c/fields/Production_Goal__c.field-meta.xml
<CustomField>
    <fullName>Production_Goal__c</fullName>
    <label>Production Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>