force-app/main/default/objects/ISUF_Metrics__c/fields/Report_Sort__c.field-meta.xml
<CustomField>
    <fullName>Report_Sort__c</fullName>
    <label>Report Sort</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>