force-app/main/default/objects/ISUF_Metrics__c/fields/Total_Fundraising_Goal__c.field-meta.xml
<CustomField>
    <fullName>Total_Fundraising_Goal__c</fullName>
    <label>Total Fundraising Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>