force-app/main/default/objects/ISUF_Metrics__c/fields/Total_ISUF_Production_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_ISUF_Production_Amount__c</fullName>
    <label>Total ISUF Production Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>