force-app/main/default/objects/ISUF_Metrics__c/fields/Total_of_Target__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Target__c</fullName>
    <label>Total of Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>